clusters/k4/kubernetes/apps/network/envoy-gateway/app/netpol.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-gateway
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: gateway-helm
  ingress:
    - fromEndpoints:
        - matchLabels: &proxy-labels
            app.kubernetes.io/name: envoy
            app.kubernetes.io/component: proxy
  egress:
    - toEndpoints:
        - matchLabels: *proxy-labels
      toPorts:
        - ports:
            - port: "18000"
              protocol: ANY
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-proxy
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
  ingress:
    - fromEndpoints:
        - matchLabels: &gateway-labels
            app.kubernetes.io/name: gateway-helm
  egress:
    - toEndpoints:
        - matchLabels: *gateway-labels
      toPorts:
        - ports:
            - port: "18000"
              protocol: ANY
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: host-envoy-proxy-http-https
spec:
  nodeSelector:
    matchLabels:
      node-role.kubernetes.io/control-plane: ""
  ingress:
  - fromCIDRSet:
      - cidrGroupRef: lan
    toPorts:
      - ports:
        - port: "80"
          protocol: TCP
        - port: "80"
          protocol: UDP
        - port: "443"
          protocol: TCP
        - port: "443"
          protocol: UDP
        - port: "5432"
          protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: envoy-proxy-http-https
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: network
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
  ingress:
    - toPorts:
        - ports:
          - port: "80"
            protocol: TCP
          - port: "80"
            protocol: UDP
          - port: "443"
            protocol: TCP
          - port: "443"
            protocol: UDP
          - port: "5432"
            protocol: TCP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
# TODO probablement à delete ?
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: envoy-same-node-fix
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: network
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
  ingress:
    - fromEntities:
        - remote-node
        - kube-apiserver
      toPorts:
        - ports:
          - port: "10080"
            protocol: TCP
          - port: "10080"
            protocol: UDP
          - port: "10443"
            protocol: TCP
          - port: "10443"
            protocol: UDP
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumclusterwidenetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: envoy-labels
spec:
  endpointSelector:
    matchLabels:
      k8s:io.kubernetes.pod.namespace: network
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
  ingress:
    - fromEndpoints:
        - matchLabels:
            egress.samoth.eu/envoy-internal: allow
      toPorts:
        - ports:
            - port: "22"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "80"
              protocol: UDP
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
            - port: "10080"
              protocol: TCP
            - port: "10080"
              protocol: UDP
            - port: "10443"
              protocol: TCP
            - port: "10443"
              protocol: UDP
  egress:
    - toEndpoints:
        - matchLabels:
            ingress.samoth.eu/envoy-internal: allow
        - matchLabels:
            egress.samoth.eu/envoy-internal: allow
        - matchLabels:
            kanidm.kaniop.rs/cluster: kanidm-cluster
            k8s:io.kubernetes.pod.namespace: security
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: envoy-internal-to-envoy-internal
spec:
  description: "Required for OIDC"
  endpointSelector:
    matchLabels: &labels
      app.kubernetes.io/name: envoy
      app.kubernetes.io/component: proxy
      gateway.envoyproxy.io/owning-gateway-name: envoy-internal
  ingress:
    - fromEndpoints:
        - matchLabels: *labels
      toPorts: &ports
        - ports:
            - port: "10080"
              protocol: ANY
            - port: "10443"
              protocol: ANY
  egress:
    - toEndpoints:
        - matchLabels: *labels
      toPorts: *ports
